--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,88 @@
 
+@article{spulber_bertrand_1995,
+	title = {Bertrand {Competition} when {Rivals}' {Costs} are {Unknown}},
+	volume = {43},
+	issn = {00221821},
+	url = {https://www.jstor.org/stable/2950422?origin=crossref},
+	doi = {10.2307/2950422},
+	language = {en},
+	number = {1},
+	urldate = {2025-10-03},
+	journal = {The Journal of Industrial Economics},
+	author = {Spulber, Daniel F.},
+	month = mar,
+	year = {1995},
+	pages = {1},
+}
+
+@article{jeon_investment_2024,
+	title = {Investment and {Usage} of the {Subsea} {Internet} {Cable} {Network}},
+	issn = {1556-5068},
+	url = {https://www.ssrn.com/abstract=4925783},
+	doi = {10.2139/ssrn.4925783},
+	abstract = {This paper studies the construction and use of undersea internet cables. In our model, ﬁrms invest in new cables that alter global data ﬂows. We model countries exchanging data and how these data ﬂows traverse the cable network. We estimate this model using new data on cable construction and usage via moment inequalities. We show that improvements in the cable network are an important contributor to growth in internet usage relative to secular trends. Our counterfactuals show the potential for an ineﬃcient allocation of cables and highlight network spillovers as more important than business stealing in driving this result.},
+	language = {en},
+	urldate = {2025-10-01},
+	journal = {SSRN Electronic Journal},
+	author = {Jeon, Jihye and Rysman, Marc},
+	year = {2024},
+}
+
+@article{rosenberg_regulating_nodate,
+	title = {Regulating {Firearm} {Markets}: {Evidence} from {California}},
+	abstract = {This paper studies the relationships between consumer demand and public health in firearm markets, and their roles in determining the impacts of firearm regulation. My analysis uses 20 years of administrative data from California, recording all licit handgun purchases in the state, the consumer and retailer in each transaction, and the universe of gun and non-gun fatalities. Isolating variation from the entry timing of firearm retailers in local markets, the presence of a first firearm retailer increases handgun purchases by 30 percent. The purchases on the margin of retailer entry are made by both repeat and first-time handgun purchasers, and these marginal handgun owners increase both homicide and suicide fatalities. To study the trade-off between consumer surplus and public health, I develop and estimate a model of consumer handgun purchase and its impact on fatalities. My estimates imply that handgun owners are adversely selected—those with a higher willingness to pay for a handgun also generate more expected fatalities—such that the expected public health costs of handgun ownership outweigh the private benefits of handgun purchase. Using the model to simulate counterfactual policies, California’s 2024 statewide sales tax on firearm purchase approximately maximizes tax revenues, but is too low when jointly accounting for consumer surplus and public health. More efficient policies target high tax rates to areas where marginal handgun purchasers have lower willingness to pay and higher expected fatalities. In particular, county-specific taxes could achieve a larger reduction in homicides and a smaller drop in consumer surplus by setting high tax rates around San Francisco and Los Angeles, while leaving the rest of the state at the status quo.},
+	language = {en},
+	author = {Rosenberg, Adam M},
+	keywords = {Est:ML},
+}
+
+@article{diario_financiero_cambios_2025,
+	title = {Los cambios en las oferta de rentas vitalicias},
+	url = {https://www.df.cl/noticias/site/docs/20250924/20250924181047/suplemento_20250925.pdf},
+	urldate = {2025-09-26},
+	author = {Diario Financiero},
+	month = sep,
+	year = {2025},
+}
+
+@incollection{clark_industrial_2021,
+	title = {The industrial organization of financial markets},
+	volume = {5},
+	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	isbn = {978-0-323-98887-2},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1573448X21000157},
+	abstract = {This chapter discusses recent developments in the literature involving applications of industrial organization methods to ﬁnance. We structure our discussion around a simple model of a ﬁnancial intermediary that concentrates its attention either on (i) the retail market and hence engages in a traditional maturity transformation business by accepting funds that can be used to invest in risky projects (loans), or (ii) the investment business, ﬁnancing its operations on the “wholesale” market and making markets or investing in higher return riskier projects. Our discussion is centered around the analysis of market structure and competition in each of these markets, focusing in turn on (i) primary and secondary markets for government and corporate debt, (ii) interbank loans, (iii) markets for retail funding, and (iv) credit markets, including mortgages.},
+	language = {en},
+	urldate = {2025-09-25},
+	booktitle = {Handbook of {Industrial} {Organization}},
+	publisher = {Elsevier},
+	author = {Clark, Robert and Houde, Jean-François and Kastl, Jakub},
+	year = {2021},
+	doi = {10.1016/bs.hesind.2021.11.015},
+	pages = {427--520},
+}
+
+@article{grubb_illusion_2023,
+	title = {The {Illusion} of {Competition}},
+	issn = {1556-5068},
+	url = {https://www.ssrn.com/abstract=4628717},
+	doi = {10.2139/ssrn.4628717},
+	abstract = {In markets where consumers must search sequentially for prices, whether a firm sells its product under one brand name or two distinct brands is consequential for market outcomes. If each firm sells a single brand then any consumer who receives multiple price quotes places firms in competition with each other. However, a two-brand firm can exhaust the search capacity of a consumer who searches for exactly two price quotes, making them “captive” to that firm. Moreover, if consumers are under an “illusion of competition” in which they believe all brands to be independent competitors, then capture is more likely because consumers do not direct their searches to independent firms. Additionally, a two-brand firm can lower consumers’ estimates of price dispersion, discouraging them from searching further, by setting identical prices. We extend canonical search models to show that multi-brand firms can raise equilibrium prices by both mechanisms. As a result, breaking the illusion of competition by advertising brand ownership may lower prices. Alternatively, requiring two merging firms to consolidate their brands rather than operate them separately or curtailing brand proliferation by limiting the visibility of such duplicate brands on online platforms can intensify price competition and benefit consumers. In some cases, however, such policies may be counterproductive.},
+	language = {en},
+	urldate = {2025-09-24},
+	journal = {SSRN Electronic Journal},
+	author = {Grubb, Michael D. and Westphal, Ryan},
+	year = {2023},
+}
+
+@article{dix_costs_2024,
+	title = {Costs of {Technological} {Frictions}: {Evidence} from {EHR} ({Non}-){Interoperability}},
+	abstract = {Interoperability—the ability of different systems to work together—is an increasingly vital component of product markets. We study the impact of interoperability frictions in the context of US hospital Electronic Health Record (EHR) systems. While use of EHR systems is widespread, interoperability of these systems remains low, particularly across those produced by different EHR vendors. We examine how interoperability affects patients by considering both a direct, technological effect of inﬂuencing health information exchange and an allocative effect of shifting the ﬂow of patients across providers. Using an event study design in which interoperability between hospital pairs changes when one changes EHR vendors, we ﬁnd evidence for both channels. When two hospitals switch to having the same EHR vendor, charges and readmissions rates for patients who are transferred and referred between them decrease by 4\% and 11\%, respectively. In addition, these hospitals now share 8\% more inpatient transfers and 9-10\% more referrals. This change in patient ﬂows further affects patient outcomes: patient health improves when their sending hospitals switch to EHR vendors used by higher-quality hospitals in the market and worsens when the opposite occurs. To quantify the welfare gain from reducing interoperability frictions, we estimate a demand model of how patients and providers trade-off interoperability with other receiving hospital characteristics when choosing where to send patients. The model is identiﬁed by changes in patient ﬂows following changes in hospital EHR vendors and interoperability levels. We show that eliminating all interoperability frictions would redirect 7.5\% of patients to different hospitals and increase joint hospital-patient welfare by 21\%, the equivalent of a 57-kilometer reduction in travel distance.},
+	language = {en},
+	author = {Dix, Rebekah and Moran, Kelsey and Nguyen, Thi Mai Anh},
+	year = {2024},
+}
+
 @article{kleven_using_2013,
 	title = {Using {Notches} to {Uncover} {Optimization} {Frictions} and {Structural} {Elasticities}: {Theory} and {Evidence} from {Pakistan} *},
 	volume = {128},
@@ -379,13 +463,6 @@
 	month = jan,
 	year = {2024},
 	doi = {10.3386/w32062},
-}
-
-@article{rosenberg_regulating_nodate,
-	title = {Regulating {Firearm} {Markets}: {Evidence} from {California}},
-	abstract = {This paper studies the relationships between consumer demand and public health in firearm markets, and their roles in determining the impacts of firearm regulation. My analysis uses 20 years of administrative data from California, recording all licit handgun purchases in the state, the consumer and retailer in each transaction, and the universe of gun and non-gun fatalities. Isolating variation from the entry timing of firearm retailers in local markets, the presence of a first firearm retailer increases handgun purchases by 30 percent. The purchases on the margin of retailer entry are made by both repeat and first-time handgun purchasers, and these marginal handgun owners increase both homicide and suicide fatalities. To study the trade-off between consumer surplus and public health, I develop and estimate a model of consumer handgun purchase and its impact on fatalities. My estimates imply that handgun owners are adversely selected—those with a higher willingness to pay for a handgun also generate more expected fatalities—such that the expected public health costs of handgun ownership outweigh the private benefits of handgun purchase. Using the model to simulate counterfactual policies, California’s 2024 statewide sales tax on firearm purchase approximately maximizes tax revenues, but is too low when jointly accounting for consumer surplus and public health. More efficient policies target high tax rates to areas where marginal handgun purchasers have lower willingness to pay and higher expected fatalities. In particular, county-specific taxes could achieve a larger reduction in homicides and a smaller drop in consumer surplus by setting high tax rates around San Francisco and Los Angeles, while leaving the rest of the state at the status quo.},
-	language = {en},
-	author = {Rosenberg, Adam M},
 }
 
 @article{olley_dynamics_1996,
@@ -5198,13 +5275,6 @@ possible explanations. (JEL F15, N94, R12, R23)},
 	author = {Gortmaker, Jeff},
 }
 
-@article{dix_costs_nodate,
-	title = {Costs of {Technological} {Frictions}: {Evidence} from {EHR} ({Non}-){Interoperability}},
-	abstract = {Interoperability—the ability of different systems to work together—is an increasingly vital component of product markets. We study the impact of interoperability frictions in the context of US hospital Electronic Health Record (EHR) systems. While use of EHR systems is widespread, interoperability of these systems remains low, particularly across those produced by different EHR vendors. We examine how interoperability affects patients by considering both a direct, technological effect of inﬂuencing health information exchange and an allocative effect of shifting the ﬂow of patients across providers. Using an event study design in which interoperability between hospital pairs changes when one changes EHR vendors, we ﬁnd evidence for both channels. When two hospitals switch to having the same EHR vendor, charges and readmissions rates for patients who are transferred and referred between them decrease by 4\% and 11\%, respectively. In addition, these hospitals now share 8\% more inpatient transfers and 9-10\% more referrals. This change in patient ﬂows further affects patient outcomes: patient health improves when their sending hospitals switch to EHR vendors used by higher-quality hospitals in the market and worsens when the opposite occurs. To quantify the welfare gain from reducing interoperability frictions, we estimate a demand model of how patients and providers trade-off interoperability with other receiving hospital characteristics when choosing where to send patients. The model is identiﬁed by changes in patient ﬂows following changes in hospital EHR vendors and interoperability levels. We show that eliminating all interoperability frictions would redirect 7.5\% of patients to different hospitals and increase joint hospital-patient welfare by 21\%, the equivalent of a 57-kilometer reduction in travel distance.},
-	language = {en},
-	author = {Dix, Rebekah and Moran, Kelsey and Nguyen, Thi Mai Anh},
-}
-
 @article{sweeting_dynamic_2013,
 	title = {Dynamic {Product} {Positioning} in {Differentiated} {Product} {Markets}: {The} {Effect} of {Fees} for {Musical} {Performance} {Rights} on the {Commercial} {Radio} {Industry}},
 	volume = {81},
@@ -7008,7 +7078,7 @@ fiscal year.},
 	author = {Quiroz, Sebastián Castro and Altamirano, Felipe Castro and División, Subjefe and Chaparro, Luis Muñoz and Silva, Benjamín Leiva and Serra, Macarena Alliende},
 }
 
-@article{quiroz_mercado_nodate-1,
+@article{quiroz_mercado_nodate,
 	title = {Mercado sobre {Notarios} ({EM02}-2017)},
 	language = {es},
 	author = {Quiroz, Sebastián Castro and Altamirano, Felipe Castro and División, Subjefe and Jullian, Jacinta Diestre and Chaparro, Luis Muñoz},
@@ -10560,21 +10630,6 @@ structural approach complements experimental analyses by enabling evaluation of 
 	year = {2021},
 	doi = {10.1016/bs.hesind.2021.11.017},
 	pages = {615--742},
-}
-
-@incollection{clark_industrial_2021,
-	title = {The industrial organization of financial markets},
-	volume = {5},
-	isbn = {978-0-323-98887-2},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S1573448X21000157},
-	language = {en},
-	urldate = {2023-02-19},
-	booktitle = {Handbook of {Industrial} {Organization}},
-	publisher = {Elsevier},
-	author = {Clark, Robert and Houde, Jean-François and Kastl, Jakub},
-	year = {2021},
-	doi = {10.1016/bs.hesind.2021.11.015},
-	pages = {427--520},
 }
 
 @incollection{bryan_innovation_2021,
