Add IE11 analysis section, figures, and tables
Introduced a new section on IE11: Determinants and direction of search in empirical3.tex, including new figures and summary tables. Added several new .tex tables and .png figures for IE11 analysis, updated auxiliary and output files, and adjusted table of contents and references accordingly.

--- a/empirical/empirical3.tex
+++ b/empirical/empirical3.tex
@@ -282,9 +282,59 @@ It means that the
 
 \newpage
 
+\section{IE 11: Determinants and direction of search} 
+
+Figure \ref{fig:ie11_1} shows that firms that made a better initial offer have a higher likelihood of making an external offer. This could be because buyers are more likely to request an external offer if the initial offer is good or because firms that make bad initial offers realize that they can no longer compete with the highest offers. Figure \ref{fig:ie11_3} shows a similar pattern. 
+ 
+
+\begin{figure}[H]
+\caption{}
+\label{fig:ie11_1}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.27]{../figures/IE11/IE11_bar_external_by_ranking.png} 
+\end{tabular}
+\end{figure}
 
 
 
+\begin{figure}[H]
+\caption{}
+\label{fig:ie11_2}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.27]{../figures/IE11/IE11_bar_ranking_by_external.png} 
+\end{tabular}
+\end{figure}
+
+
+
+\begin{figure}[H]
+\caption{}
+\label{fig:ie11_3}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.27]{../figures/IE11/IE11_bar_external_by_gapfrommax.png} 
+\end{tabular}
+\end{figure}
+
+\begin{figure}[H]
+\caption{}
+\label{fig:ie11_4}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.27]{../figures/IE11/IE11_bar_external_by_creditrating.png} 
+\end{tabular}
+\end{figure}
+
+\newpage 
+
+\input{../Tables/IE11/IE11_external_acceptance_summary.tex}
+
+
+
+
+\newpage
 
 
 \section{Appendix: IE5 granularity}\label{sec:appendix_ie5}
