Updates from Overleaf

--- a/models/model5_v2.tex
+++ b/models/model5_v2.tex
@@ -187,7 +187,7 @@ We consider $C$ points in a grid in the range $[\underline{c}, \bar{c}] $
     if the distance is lower than a tolerance level we stop. If it is higher we update each price according to 
 
     $\hat{p}^1(c) = \hat{p}^0(c) - \beta d(c)$
-    
+    where $\beta$ is a dampening factor, the closer (further) from zero the smaller(bigger) the update. 
 \end{enumerate}
 
 
